--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "nodemailer": "^6.7.2"
   }
 }
