--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "uuid": "^8.3.2"
   }
 }
