--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,10 @@
     "no-plusplus": "off",
     "no-tabs": "off",
     "func-names": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": ["warn"],
+    "import/extensions": ["off"],
+    "import/no-unresolved": ["off"]
   }
 }
