--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "nodemailer": "^6.7.2",
+    "ts-node": "^10.4.0",
     "uuid": "^8.3.2"
   }
 }
