--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 PORT=5000
 DB_URL=mongodb+srv://user:user@cluster0.f8r7e.mongodb.net/authorization?retryWrites=true&w=majority
+JWT_ACCESS_SECRET=jwt-secret-key
+JWT_REFRESH_SECRET=jwt-refresh-secret-key
+SMTP_HOST='smtp.yandex.ru'
+SMTP_PORT=587
+SMTP_USER='i.shokel.vironit@vironit.ru'
+SMTP_PASSWORD='lmddisdkpvjobqoi'
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:4200
