--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
